# email-calendar-sync-engine

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  README.md  codecov.yml  renovate.json
.github/workflows/: ci.yml
crates/engine-api/: Cargo.toml
crates/engine-api/src/: body.rs  clock.rs  engine.rs  lib.rs
crates/engine-api/tests/: sync.rs
crates/engine-cli/: Cargo.toml
crates/engine-cli/examples/: dump_fixture.rs
crates/engine-cli/fixtures/: sample.json
crates/engine-cli/src/: cli.rs  ingest.rs  lib.rs  main.rs
crates/engine-cli/tests/: binary.rs  pipeline.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: attachment.rs  coverage.rs  error.rs  extended.rs  lib.rs  macros.rs  membership.rs  patch.rs  raw.rs  scheduling.rs  version.rs  write.rs
crates/engine-core/src/calendar/: alert.rs  calendar_collection.rs  event.rs  kind.rs  location.rs  mod.rs  participant.rs  recurrence.rs  recurrence_set.rs
crates/engine-core/src/ids/: account.rs  calendar.rs  dav.rs  mail.rs  mod.rs
crates/engine-core/src/mail/: address.rs  body.rs  content.rs  header.rs  keyword.rs  mailbox.rs  message.rs  mod.rs  role.rs  thread.rs
crates/engine-core/src/scheduling/: detect.rs  key.rs  message.rs  mod.rs  reconcile.rs  trust.rs
crates/engine-core/src/search_index/: calendar.rs  mail.rs  mod.rs
crates/engine-core/src/sync/: mod.rs  scope.rs  state.rs  update.rs
crates/engine-core/src/time/: date.rs  datetime.rs  duration.rs  mod.rs  value.rs  zone.rs
crates/engine-core/tests/: calendar_model.rs  contracts.rs  mail_model.rs  time_model.rs
crates/engine-mime/: Cargo.toml
crates/engine-mime/src/: attachment.rs  lib.rs
crates/engine-provider/: Cargo.toml
crates/engine-provider/src/: calendar_write.rs  capability.rs  error.rs  lib.rs  mail_edit.rs  page.rs  submit.rs  sync.rs  watch.rs
crates/engine-recurrence/: Cargo.toml
crates/engine-recurrence/src/: expand.rs  lib.rs  rule.rs  zone.rs
crates/engine-recurrence/tests/: expansion.rs
crates/engine-search/: Cargo.toml
crates/engine-search/src/: coverage.rs  lib.rs  parse.rs  query.rs  result.rs  rrf.rs
crates/engine-store/: Cargo.toml
crates/engine-store/src/: apply.rs  contract.rs  error.rs  lease.rs  lib.rs  mem.rs  outbox.rs  source.rs  store.rs
crates/engine-store/src/contract/: outbox_cases.rs  scope_cases.rs
crates/engine-store/tests/: contract.rs
crates/engine-sync/: Cargo.toml
crates/engine-sync/src/: attachment.rs  body.rs  lib.rs  outbox.rs  stream.rs  tests.rs  threading.rs
crates/engine-sync/src/tests/: mail_edit.rs  streaming.rs
crates/provider-caldav/: Cargo.toml
crates/provider-caldav/examples/: caldav_explore.rs
crates/provider-caldav/src/: calendar.rs  dav.rs  discovery.rs  error.rs  imip.rs  lib.rs  provider.rs  provider_tests.rs  request.rs  sync.rs  test_support.rs  transport.rs  write.rs
crates/provider-caldav/src/ical/: build.rs  component.rs  event.rs  mod.rs  party.rs  recur.rs  recurrence.rs  unfold.rs  value.rs
crates/provider-caldav/tests/: live_caldav.rs  live_sabredav.rs
crates/provider-caldav/tests/common/: mod.rs
crates/provider-caldav/tests/fixtures/: calendar-home.xml  principal.xml  sync-initial.xml  sync-noop.xml
crates/provider-graph/: Cargo.toml
crates/provider-graph/src/: error.rs  fetch.rs  json.rs  lib.rs  normalize.rs  principal.rs  provider.rs  test_support.rs  transport.rs
crates/provider-graph/tests/: live_provider.rs
crates/provider-graph/tests/fixtures/: README.md  me.json
crates/provider-graph/tests/fixtures/error/: bad_request.json  unauthorized.json
crates/provider-graph/tests/fixtures/mail/: mailfolders.json  mailfolders_delta.json  message_detail.json  messages_delta_changed.json  messages_delta_changed_full.json  messages_delta_nochange.json  messages_delta_removed.json  messages_delta_snapshot.json  messages_list_page1.json  messages_list_page2.json
crates/provider-graph/tests/fixtures/wellknown/: archive.json  deleteditems.json  drafts.json  inbox.json  junkemail.json  msgfolderroot.json  outbox.json  sentitems.json
crates/provider-imap/: Cargo.toml
crates/provider-imap/examples/: imap_explore.rs
crates/provider-imap/src/: base64.rs  bodystructure.rs  cursor.rs  encoded_word.rs  error.rs  fetch.rs  fetch_tests.rs  filing.rs  idle.rs  idle_tests.rs  integration.rs  lib.rs  mail.rs  mail_tests.rs  mock.rs  mutate.rs  mutate_tests.rs  parse.rs  parse_qresync.rs  parse_tests.rs  provider.rs  provider_tests.rs  qresync.rs  qresync_tests.rs  smtp.rs  smtp_cc_bcc_tests.rs  smtp_mime_tests.rs  smtp_tests.rs  smtp_threading_tests.rs  sync.rs  sync_tests.rs  target.rs  tokenize.rs  transport.rs  transport_tests.rs  watch.rs  watch_tests.rs
crates/provider-imap/src/smtp/: mime.rs
crates/provider-imap/tests/: live_imap.rs  live_imap_idle.rs  live_imap_qresync.rs
crates/provider-jmap/: Cargo.toml
crates/provider-jmap/src/: calendar.rs  calendar_tests.rs  error.rs  fetch.rs  json.rs  lib.rs  mail.rs  provider.rs  provider_tests.rs  request.rs  session.rs  submit.rs  sync_ops.rs  transport.rs
crates/provider-jmap/tests/: live_provider.rs  live_sync.rs
crates/provider-jmap/tests/fixtures/: README.md  calendar_get.json  calendar_snapshot_response.json  calendarevent_get.json  email_changes_response.json  email_get.json  email_snapshot_response.json  event_snapshot_response.json  mailbox_get.json  mailbox_snapshot_response.json  submit_context_response.json  submit_send_response.json
crates/stalwart-harness/: Cargo.toml
crates/stalwart-harness/src/: http.rs  imap.rs  lib.rs  smtp.rs
crates/stalwart-harness/tests/: smoke.rs
crates/store-sqlite/: Cargo.toml
crates/store-sqlite/src/: blob.rs  convert.rs  derived_ops.rs  lib.rs  migrations.rs  outbox_ops.rs  schema.rs  scope_ops.rs  search_ops.rs  source_ops.rs
crates/store-sqlite/tests/: contract.rs  durability.rs  message_source.rs  search.rs  vacuum.rs
docker/sabredav/: Dockerfile  (+6 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: caldav_parse.rs  jmap_parse.rs
tools/graph-oauth/: .gitignore  Cargo.toml  README.md
tools/graph-oauth/src/: main.rs
(+35 files in other folders)
