[workspace]
resolver = "2"
members = ["crates/*"]

# Shared package metadata. Member crates opt in with `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

# Centralized dependency versions so every crate agrees on one version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
# SQLite backend: `bundled` compiles a pinned SQLite amalgamation (FTS5 enabled),
# so the build needs no system libsqlite3 and every platform agrees on one engine.
rusqlite = { version = "0.40", features = ["bundled"] }
tempfile = "3"
# Recurrence expansion resolves wall-clock times through IANA zones. We force the
# bundled, version-pinned tzdb and disable jiff's defaults so it never reads the
# host's `/usr/share/zoneinfo`/`TZDIR`/system zone: expansion must be identical
# across a user's devices (`calendar-semantics.md`). `jiff_tzdb::VERSION` is the
# pinned release recorded on each occurrence.
jiff = { version = "0.2", default-features = false, features = ["std", "tzdb-bundle-always"] }
jiff-tzdb = "0.1"

# Internal crates, referenced by path so members opt in with `workspace = true`.
engine-core = { path = "crates/engine-core" }
engine-store = { path = "crates/engine-store" }
engine-search = { path = "crates/engine-search" }
engine-recurrence = { path = "crates/engine-recurrence" }
store-sqlite = { path = "crates/store-sqlite" }

# Strict, workspace-wide lint policy (AGENTS.md / rust.md). Member crates inherit
# via `[lints] workspace = true`. Verification runs clippy with `-D warnings`, so
# every lint below is effectively an error in CI.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Our module/type naming (e.g. `mail::MailboxId`) intentionally repeats the module
# name for clarity at the call site; this pedantic lint fights that convention.
module_name_repetitions = "allow"
# `doc_markdown` flags domain proper nouns (CalDAV, JMAP, JSCalendar, VTIMEZONE,
# RFC/protocol names) as if they were unticked code identifiers. Our docs are
# protocol-heavy prose where these are proper nouns, not code, so the lint fires
# almost entirely on false positives.
doc_markdown = "allow"
