[workspace]
resolver = "2"
members = ["crates/*"]

# Shared package metadata. Member crates opt in with `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

# Centralized dependency versions so every crate agrees on one version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
# SQLite backend: `bundled` compiles a pinned SQLite amalgamation (FTS5 enabled),
# so the build needs no system libsqlite3 and every platform agrees on one engine.
rusqlite = { version = "0.40", features = ["bundled"] }
tempfile = "3"
# Recurrence expansion resolves wall-clock times through IANA zones. We force the
# bundled, version-pinned tzdb and disable jiff's defaults so it never reads the
# host's `/usr/share/zoneinfo`/`TZDIR`/system zone: expansion must be identical
# across a user's devices (`calendar-semantics.md`). `jiff_tzdb::VERSION` is the
# pinned release recorded on each occurrence.
jiff = { version = "0.2", default-features = false, features = ["std", "tzdb-bundle-always"] }
jiff-tzdb = "0.1"
# Product JMAP client HTTP stack. rustls (pure-Rust TLS) cross-compiles to
# iOS/Android without OpenSSL; default features are off so we do not pull native
# TLS. The harness speaks plaintext HTTP, but real providers are HTTPS, so TLS
# stays in the transport (`docs/agent-guidance/jmap.md`).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset"] }
# Pure-Rust TLS for the hand-rolled IMAP transport (implicit-TLS on 993). `ring`
# (not the default `aws-lc-rs`) keeps the workspace on one crypto provider —
# reqwest's `rustls-tls` above already pulls rustls+ring — so this adds no new
# C/cross-compile surface for the iOS/Android builds. The transport is generic over
# any async stream; this only backs the live `connect()` path, with the host
# injecting trust policy (`docs/agent-guidance/imap-smtp.md`).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
# The no-verify verifier for Stalwart's self-signed test cert lives in test code
# only (a dev-dependency), never the host store — same posture as stalwart-harness.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# Pure-Rust streaming XML reader for the CalDAV/WebDAV multistatus parser
# (`provider-caldav`). WebDAV responses are namespaced XML with CDATA-wrapped
# calendar data and per-property status; a hardened, battle-tested reader is the
# right tool for hostile input (calendar data is untrusted — `north-star.md`
# security), and hand-rolling one would be a correctness/safety risk for no gain.
# No C dependency, so it cross-compiles to mobile like the rest of the stack.
quick-xml = "0.37"
# Pure-Rust MIME/RFC 5322 parser (`engine-mime`), by the same authors as our
# Stalwart test target. Mail bodies are hostile input (`north-star.md` security),
# and charset/encoded-word/nested-multipart decoding is spec-heavy and a known
# correctness/safety minefield — a hardened, fuzzed parser is the right tool, and
# it is pure Rust so it cross-compiles to mobile like the rest of the stack. The
# `full_encoding` feature (no longer default since 0.11.2) pulls the full legacy
# charset tables so non-UTF-8 bodies decode correctly.
mail-parser = { version = "0.11", default-features = false, features = ["full_encoding"] }
# Content addressing for the on-disk raw-message/attachment blob area
# (`store-sqlite`): blobs are named by the SHA-256 of their bytes, deduping IMAP
# copies of one message and giving filesystem-safe, fixed-length names. Pure Rust,
# no C surface.
sha2 = { version = "0.10", default-features = false }

# Internal crates, referenced by path so members opt in with `workspace = true`.
engine-core = { path = "crates/engine-core" }
engine-mime = { path = "crates/engine-mime" }
engine-store = { path = "crates/engine-store" }
engine-search = { path = "crates/engine-search" }
engine-recurrence = { path = "crates/engine-recurrence" }
engine-provider = { path = "crates/engine-provider" }
provider-jmap = { path = "crates/provider-jmap" }
provider-imap = { path = "crates/provider-imap" }
provider-caldav = { path = "crates/provider-caldav" }
engine-sync = { path = "crates/engine-sync" }
store-sqlite = { path = "crates/store-sqlite" }
engine-api = { path = "crates/engine-api" }

# Strict, workspace-wide lint policy (AGENTS.md / rust.md). Member crates inherit
# via `[lints] workspace = true`. Verification runs clippy with `-D warnings`, so
# every lint below is effectively an error in CI.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Our module/type naming (e.g. `mail::MailboxId`) intentionally repeats the module
# name for clarity at the call site; this pedantic lint fights that convention.
module_name_repetitions = "allow"
# `doc_markdown` flags domain proper nouns (CalDAV, JMAP, JSCalendar, VTIMEZONE,
# RFC/protocol names) as if they were unticked code identifiers. Our docs are
# protocol-heavy prose where these are proper nouns, not code, so the lint fires
# almost entirely on false positives.
doc_markdown = "allow"
