[package]
name = "engine-api"
description = "The stable host-facing facade for the PIM sync engine (north-star.md): one Engine that owns a SQLite store and a wall clock, over which hosts (UniFFI/C ABI/CLI/server) drive provider-agnostic sync — and, in later slices, search and writes. This first slice covers store lifecycle and mail/calendar sync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
engine-core = { workspace = true }
engine-store = { workspace = true }
engine-sync = { workspace = true }
engine-provider = { workspace = true }
engine-recurrence = { workspace = true }
store-sqlite = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
