[package]
name = "engine-cli"
description = "Headless ingestion/search harness for the PIM sync engine: open/migrate a SQLite store, ingest JSON fixtures (project -> expand -> apply), advance the occurrence horizon, and run DSL queries. The CLI host from north-star.md, used for fixtures and debugging."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
engine-core = { workspace = true }
engine-store = { workspace = true }
engine-search = { workspace = true }
engine-recurrence = { workspace = true }
store-sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
