[package]
name = "engine-core"
description = "Pure, I/O-free, async-free domain model for the PIM sync engine: identities, normalized mail and calendar types, scheduling, and cross-crate sync/search/write contracts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
