[package]
name = "engine-mime"
description = "MIME/RFC 5322 body extraction for the PIM sync engine: pure RawMime -> MessageBody (best text/plain + text/html parts, content-transfer- and charset-decoded to UTF-8) over a hardened mail-parser. No I/O, no async; hostile input yields an empty body, never a panic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
engine-core = { workspace = true }
mail-parser = { workspace = true }

[lints]
workspace = true
