[package]
name = "engine-store"
description = "Store trait, lease/fencing concurrency contract, a reusable store contract test suite, and an in-memory reference store for the PIM sync engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
engine-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
