[package]
name = "store-sqlite"
description = "SQLite-backed Store/StoreRead for the PIM sync engine: the durable reference backend that satisfies the engine-store concurrency contract, with content-addressed blobs and FTS5 search layered on top."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
engine-core = { workspace = true }
engine-store = { workspace = true }
engine-search = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Content-addressed filesystem blob area for raw message sources (`blob.rs`):
# `sha2` names each blob by its content hash; `tempfile` backs the in-memory
# store's auto-cleaned blob dir and atomic temp-then-rename blob writes.
sha2 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
